package co.proyecto.model;

import jakarta.persistence.Entity;

@Entity
public class Administrador extends Usuario {
    // Métodos específicos del administrador
}