package co.proyecto.model;

import jakarta.persistence.Entity;

@Entity
public class OperadorEmergencia extends Usuario {
    // Métodos específicos del operador de emergencia
}