package co.proyecto.model;

public enum EstadoEquipo {
    DISPONIBLE,
    EN_MISION,
    DESCANSO
}