package co.proyecto.model;

public enum EstadoEvacuacion {
    PENDIENTE,
    EN_PROCESO,
    COMPLETADA
}