package co.proyecto.model;

public enum Rol {
    ADMINISTRADOR,
    OPERADOR
}