package co.proyecto.model;

public enum TipoRecurso {
    ALIMENTO,
    MEDICINA,
    EQUIPO_RESCATE
}