package co.proyecto.model;

public enum TipoUbicacion {
    CIUDAD,
    REFUGIO,
    CENTRO_AYUDA
}